--- a/weatherapp/src/main/res/layout/activity_main.xml
+++ b/weatherapp/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:onClick="onClickShowWeather"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -49,7 +50,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:padding="8dp"
-        android:text="Погода"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold"
